err/webskewer.http.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/greennet'...
Compiling './lib/python3.5/site-packages/greennet/__init__.py'...
***   File "./lib/python3.5/site-packages/greennet/__init__.py", line 111
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greennet/hub.py'...
***   File "./lib/python3.5/site-packages/greennet/hub.py", line 193
    except (select.error, IOError, OSError), err:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greennet/trigger.py'...
***   File "./lib/python3.5/site-packages/greennet/trigger.py", line 31
    except (IOError, OSError), err:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greennet-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Compiling './lib/python3.5/site-packages/tests/testall.py'...
Listing './lib/python3.5/site-packages/webskewer'...
Listing './lib/python3.5/site-packages/webskewer/http'...
Compiling './lib/python3.5/site-packages/webskewer/http/main.py'...
***   File "./lib/python3.5/site-packages/webskewer/http/main.py", line 39
    except (socket.error, select.error), err:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webskewer/http/serve.py'...
***   File "./lib/python3.5/site-packages/webskewer/http/serve.py", line 54
    print log_req(self.environ, self.status, self.headers, self.bytes_sent)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webskewer/http/static_files.py'...
***   File "./lib/python3.5/site-packages/webskewer/http/static_files.py", line 10
    def read_range(file, (start, end), bufsize=8192):
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webskewer.http-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
